@@ -9,7 +9,7 @@ Vcs-Svn: svn://svn.debian.org/d-i/trunk/packages/hw-detect
 Package: hw-detect
 XC-Package-Type: udeb
 Architecture: any
-Depends: rootskel (>= 1.30), archdetect, cdebconf-udeb (>= 0.75), di-utils (>= 1.48)
+Depends: rootskel (>= 1.30), archdetect, cdebconf-udeb (>= 0.75), di-utils (>= 1.66)
 Description: Detect hardware and load kernel drivers for it
 
 Package: ethdetect
