@@ -5,6 +5,9 @@ hw-detect (1.72) UNRELEASED; urgency=low
   * Cope with dm-mod being built-in (e.g. custom kernels).
   * Merge from Ubuntu:
     - Check dmraid's exit code rather than parsing its output.
+    - Use 'update-dev --settle' rather than 'update-dev' after loading
+      modules (although not after installing new module packages, which may
+      still require a trigger). Requires di-utils 1.66.
 
   [ Frans Pop ]
   * Install usbutils based on presence of /sys/bus/usb.
